--- a/src/AttendanceManager/templates/auth/signup.html
+++ b/src/AttendanceManager/templates/auth/signup.html
@@ -70,6 +70,39 @@
       </div>
     </div>
 
+    <label for="departments" class="form-label">Departments</label>
+    <div class="input-group mb-3">
+      <select class="form-select" id="inputGroupSelect01">
+        <option selected>Departments</option>
+        <option value="1">Applied Linguistics</option>
+        <option value="2">Electrical Engineering</option>
+        <option value="3">Horticulture</option>
+        <option value="4">Mathematics & Informatics</option>
+        <option value="5">Mechanical Engineering</option>
+      </select>
+    </div>
+  
+    <label for="study_program" class="form-label">Study Program</label>
+    <div class="input-group mb-3">
+      <select class="form-select" id="inputGroupSelect01">
+        <option selected>Study Program</option>
+        <option value="1">Agricultural Engineering</option>
+        <option value="2">Automation and Applied Informatics</option>
+        <option value="3">Computer Science</option>
+        <option value="4">Communication and Public Relations</option>
+        <option value="5">Forestry</option>
+        <option value="6">Horticultural Engineering</option>
+        <option value="7">Informatics</option>
+        <option value="8">Landscape Architecture</option>
+        <option value="9">Machine Manufacturinig Engineering</option>
+        <option value="10">Mechatronics</option>
+        <option value="11">Public Health Services and Policies</option>
+        <option value="12">Telecommunication Systems and Technologies</option>
+        <option value="13">Translateion and Interpreting Studies</option>
+
+      </select>
+    </div>
+
     <div class="row mb-3">
       <div class="form-group col">
         <button class="btn btn-success">Register</button>
@@ -83,6 +116,7 @@
       Already Have an Account? <a href="{{ url_for('auth.login') }}" class="me-2">Log In!</a>
     </small>
   </div>
+
 
 </fieldset>
 
