--- a/src/AttendanceManager/templates/general/profile.html
+++ b/src/AttendanceManager/templates/general/profile.html
@@ -17,7 +17,7 @@
           <input type="text" name="first_name" id="first_name"
                  class="form-control"
                  disabled
-                 value="{{ user.FirstName }}">
+                 value="{{ user.Fir4stName }}">
         </div>
       </div>
       <div class="form-group col-6">
