--- a/src/AttendanceManager/templates/teacher/courses.html
+++ b/src/AttendanceManager/templates/teacher/courses.html
@@ -5,5 +5,154 @@
 {% block content %}
 
 <h1>Courses Teacher</h1>
+<div class="row panel mt-5">
 
+    <h1 class="mb-5">My Courses</h1>
+  
+    <div class="col-3 menu">
+      <h2>Menu</h2>
+  
+      <hr>
+  
+      <div class="d-grid gap-2">
+        <button class="btn btn-success" type="button">Fizika II.</button>
+        <button class="btn btn-success" type="button">Villamosságtan II.</button>
+        <button class="btn btn-success" type="button">Adatbázis I.</button>
+      </div>
+  
+    </div>
+  
+    <div class="col-9">
+  
+      <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        New Course
+      </button>
+      
+      <!-- Modal -->
+      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="row mb-3">
+                <div class="form-group">
+                  <label for="course_code">Course Code</label>
+                  <div class="input-group has-validation">
+                    <input type="text"
+                           name="course_code"
+                           id="course_code"
+                           class="form-control"
+                           placeholder="ABCDE1">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-success">Enroll</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <h2>Fizika II.</h2>
+  
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th class="text-center ">Nr.</th>
+            <td class="text-center">Date</td>
+            <td class="text-center">Attendace</td>
+            <td class="text-center">Missed</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th class="text-center">1</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center">X</td>
+            <td class="text-center"></td>
+          </tr>
+          <tr>
+            <th class="text-center">2</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center">X</td>
+            <td class="text-center"></td>
+          </tr>
+          <tr>
+            <th class="text-center">3</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center"></td>
+            <td class="text-center">X</td>
+          </tr>
+          <tr>
+            <th class="text-center">4</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center"></td>
+            <td class="text-center">X</td>
+          </tr>
+          <tr>
+            <th class="text-center">5</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center">X</td>
+            <td class="text-center"></td>
+          </tr>
+          <tr>
+            <th class="text-center">6</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center"></td>
+            <td class="text-center">X</td>
+          </tr>
+          <tr>
+            <th class="text-center">7</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center">X</td>
+            <td class="text-center"></td>
+          </tr>
+          <tr>
+            <th class="text-center">8</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center">X</td>
+            <td class="text-center"></td>
+          </tr>
+          <tr>
+            <th class="text-center">9</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center"></td>
+            <td class="text-center">X</td>
+          </tr>
+          <tr>
+            <th class="text-center">10</th>
+            <td class="text-center">2022-10-10</td>
+            <td class="text-center"></td>
+            <td class="text-center">X</td>
+          </tr>
+        </tbody>
+      </table>
+  
+    </div>
+  </div>
+  
+  <style>
+    .card {
+      background: black;
+    }
+  
+    .menu {
+      border-right: 1px solid black;
+    }
+  
+    .panel {
+      background: rgba(245, 245, 245, 0.9);
+      padding: 15px;
+      border-radius: 10px;
+  
+      -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+    }
+  
+  </style>
 {% endblock content %}
