--- a/src/AttendanceManager/templates/general/profile.html
+++ b/src/AttendanceManager/templates/general/profile.html
@@ -78,15 +78,13 @@
   .panel {
     margin: 0 auto;
     max-width: 500px;
-  }
-
-  fieldset {
+    background: rgba(245, 245, 245, 0.9);
     padding: 15px;
-
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
-
     border-radius: 10px;
+
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.9);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   }
+
 </style>
 {% endblock content %}
