--- a/src/AttendanceManager/templates/teacher/courses.html
+++ b/src/AttendanceManager/templates/teacher/courses.html
@@ -26,7 +26,7 @@
     <div class="col-9">
   
       <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-        New Course
+        New Student
       </button>
       
       <!-- Modal -->
@@ -66,6 +66,7 @@
           <tr>
             <th class="text-center ">Nr.</th>
             <td class="text-center">Date</td>
+            <td class="text-center">Student</td>
             <td class="text-center">Attendace</td>
             <td class="text-center">Missed</td>
           </tr>
@@ -74,60 +75,70 @@
           <tr>
             <th class="text-center">1</th>
             <td class="text-center">2022-10-10</td>
+            <td class="text-center">Trab Antal</td>
             <td class="text-center">X</td>
             <td class="text-center"></td>
           </tr>
           <tr>
             <th class="text-center">2</th>
             <td class="text-center">2022-10-10</td>
+            <td class="text-center">Pop Simon</td>
             <td class="text-center">X</td>
             <td class="text-center"></td>
           </tr>
           <tr>
             <th class="text-center">3</th>
             <td class="text-center">2022-10-10</td>
-            <td class="text-center"></td>
+            <td class="text-center">Para Zita</td>
             <td class="text-center">X</td>
+            <td class="text-center"></td>
           </tr>
           <tr>
             <th class="text-center">4</th>
             <td class="text-center">2022-10-10</td>
-            <td class="text-center"></td>
+            <td class="text-center">Git Áron</td>
             <td class="text-center">X</td>
+            <td class="text-center"></td>
           </tr>
           <tr>
             <th class="text-center">5</th>
             <td class="text-center">2022-10-10</td>
+            <td class="text-center">Feles Elek</td>
             <td class="text-center">X</td>
             <td class="text-center"></td>
           </tr>
           <tr>
             <th class="text-center">6</th>
             <td class="text-center">2022-10-10</td>
-            <td class="text-center"></td>
+            <td class="text-center">Citad Ella</td>
             <td class="text-center">X</td>
+            <td class="text-center"></td>
           </tr>
           <tr>
             <th class="text-center">7</th>
             <td class="text-center">2022-10-10</td>
+            <td class="text-center">Vak Cina</td>
             <td class="text-center">X</td>
             <td class="text-center"></td>
           </tr>
           <tr>
             <th class="text-center">8</th>
             <td class="text-center">2022-10-10</td>
+            <td class="text-center">Virra Dóra</td>
             <td class="text-center">X</td>
             <td class="text-center"></td>
           </tr>
           <tr>
             <th class="text-center">9</th>
             <td class="text-center">2022-10-10</td>
-            <td class="text-center"></td>
+            <td class="text-center">Kasza Blanka</td>
             <td class="text-center">X</td>
+            <td class="text-center"></td>
           </tr>
           <tr>
             <th class="text-center">10</th>
             <td class="text-center">2022-10-10</td>
+            <td class="text-center">Pofá Zoltán</td>
             <td class="text-center"></td>
             <td class="text-center">X</td>
           </tr>
