--- a/src/AttendanceManager/templates/student/courses.html
+++ b/src/AttendanceManager/templates/student/courses.html
@@ -6,10 +6,10 @@
 
 <div class="row panel mt-5">
 
-  <h1 class="mb-5">My Courses</h1>
+  <h1 class="mb-5">Trab Antal</h1>
 
   <div class="col-3 menu">
-    <h2>Menu</h2>
+    <h2>My Courses</h2>
 
     <hr>
 
