--- a/src/AttendanceManager/templates/teacher/courses.html
+++ b/src/AttendanceManager/templates/teacher/courses.html
@@ -4,13 +4,12 @@
 
 {% block content %}
 
-<h1>Courses Teacher</h1>
 <div class="row panel mt-5">
 
-    <h1 class="mb-5">My Courses</h1>
+    <h1 class="mb-5">Dr. Kutasi Dénes-Nimród</h1>    
   
     <div class="col-3 menu">
-      <h2>Menu</h2>
+      <h3>My Courses</h3>
   
       <hr>
   
