--- a/src/AttendanceManager/templates/auth/signup.html
+++ b/src/AttendanceManager/templates/auth/signup.html
@@ -10,7 +10,10 @@
 
     <div class="row mb-3">
       <div class="form-group">
-        <label for="email" class="form-label">E-mail</label>
+        <label for="email" class="form-label">
+          <i class="bi bi-info-circle-fill text-danger"></i>
+          E-mail
+        </label>
         <div class="input-group has-validation">
           <input type="email" name="email" id="email"
                  class="form-control"
@@ -21,7 +24,10 @@
 
     <div class="row mb-3">
       <div class="form-group">
-        <label for="neptun_code">Neptun Code</label>
+        <label for="neptun_code">
+          <i class="bi bi-info-circle-fill text-danger"></i>
+          Neptun Code
+        </label>
         <div class="input-group has-validation">
           <input type="text"
                  name="neptun_code"
@@ -34,7 +40,10 @@
 
     <div class="row mb-3">
       <div class="form-group col-6">
-        <label for="first_name" class="form-label">First Name</label>
+        <label for="first_name" class="form-label">
+          <i class="bi bi-info-circle-fill text-danger"></i>
+          First Name
+        </label>
         <div class="input-group has-validation">
           <input type="text" name="first_name" id="first_name"
                  class="form-control"
@@ -42,7 +51,10 @@
         </div>
       </div>
       <div class="form-group col-6">
-        <label for="last_name" class="form-label">Last Name</label>
+        <label for="last_name" class="form-label">
+          <i class="bi bi-info-circle-fill text-danger"></i>
+          Last Name
+        </label>
         <div class="input-group has-validation">
           <input type="text" name="last_name" id="last_name"
                  class="form-control"
@@ -53,7 +65,10 @@
 
     <div class="row mb-3">
       <div class="form-group col-6">
-        <label for="password" class="form-label">Password</label>
+        <label for="password" class="form-label">
+          <i class="bi bi-info-circle-fill text-danger"></i>
+          Password
+        </label>
         <div class="input-group has-validation">
           <input type="password" name="password" id="password"
                  class="form-control"
@@ -61,7 +76,10 @@
         </div>
       </div>
       <div class="form-group col-6">
-        <label for="confirm_password" class="form-label">Confirm Password</label>
+        <label for="confirm_password" class="form-label">
+          <i class="bi bi-info-circle-fill text-danger"></i>
+          Confirm Password
+        </label>
         <div class="input-group has-validation">
           <input type="password" name="confirm_password" id="confirm_password"
                  class="form-control"
@@ -70,7 +88,10 @@
       </div>
     </div>
 
-    <label for="departments" class="form-label">Departments</label>
+    <label for="departments" class="form-label">
+      <i class="bi bi-info-circle-fill text-danger"></i>
+      Departments
+    </label>
     <div class="input-group mb-3">
       <select class="form-select" name="department">
         <option value="0" disabled selected hidden>Select your department</option>
@@ -80,7 +101,10 @@
       </select>
     </div>
 
-    <label for="study_program" class="form-label">Study Program</label>
+    <label for="study_program" class="form-label">
+      <i class="bi bi-info-circle-fill text-primary"></i>
+      Study Program
+    </label>
     <div class="input-group mb-3">
       <select class="form-select" name="study_program">
         <option value="0" disabled selected hidden>Select your study program</option>
@@ -88,6 +112,16 @@
         <option value="{{ study_program.StudyProgramID }}">{{ study_program.StudyProgramName }}</option>
         {% endfor %}
       </select>
+    </div>
+
+    <div class="row mb-3">
+      <small class="text-primary">
+        Study program is not required when signing up as a teacher!
+      </small>
+      <span class="mb-3"></span>
+      <small class="text-danger">
+        <i class="bi bi-info-circle-fill"></i> - Required field
+      </small>
     </div>
 
     <div class="row mb-3">
