--- a/src/AttendanceManager/templates/student/courses.html
+++ b/src/AttendanceManager/templates/student/courses.html
@@ -6,14 +6,14 @@
 
 <div class="row panel mt-5">
 
-  <h1 class="mb-5">Trab Antal</h1>
+  <h1 class="mb-5">Enrolled Courses</h1>
 
   <div class="col-3 menu">
     <div class="list-group">
       <button class="list-group-item list-group-item-action bg-primary text-white" data-bs-toggle="modal"
               data-bs-target="#staticBackdrop">Enroll in New Course</button>
     </div>
-    
+
     <hr>
 
     <div class="list-group list-group-numbered">
