--- a/src/AttendanceManager/templates/base.html
+++ b/src/AttendanceManager/templates/base.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg bg-light sticky-top">
     <div class="container-fluid">
       <a href="{{ url_for('general.index') }}" class="navbar-brand">
         <img src="{{ url_for('static', filename='logo.png') }}" height="50px" alt="Logo">
@@ -98,6 +98,12 @@
   <div class="container mt-5">
     {% block content %} {% endblock content %}
   </div>
+
+  <div class="mt-4 mb-3 ">
+      <div class="text-center">
+        <h4 class="footer-text">Attendance Manager @ Sapientia EMTE 2022</h4>
+      </div>
+  </div>
 </body>
 
 
@@ -115,12 +121,28 @@
   }
 
   nav {
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   }
 
   .nav-item {
     margin-left: 20px;
+  }
+
+  .footer-text {
+    color: rgba(245, 245, 245, 0.9);
+
+    -webkit-text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+  }
+
+  .panel {
+    background: rgba(245, 245, 245, 0.9);
+    padding: 10px;
+    border-radius: 10px;
+
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   }
 </style>
 
