--- a/src/AttendanceManager/templates/teacher/courses.html
+++ b/src/AttendanceManager/templates/teacher/courses.html
@@ -31,12 +31,16 @@
     {% if selected_course != None %}
     <h2>
       {{ selected_course.Name }}
+
       <div class="float-end">
         <button class="btn btn-primary" data-bs-toggle="modal"
                 data-bs-target="#newCourseModal">Show QR Code</button>
         <button class="btn btn-success" data-bs-toggle="modal"
                 data-bs-target="#newOccasion">Create New Occasion</button>
       </div>
+
+      <hr>
+
     </h2>
 
     <table class="table table-striped table-hover table-bordered">
@@ -200,6 +204,11 @@
     padding: 5px;
     border-radius: 5px;
     border: 1px solid lightgray;
+  }
+
+  table {
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   }
 
   .menu {
