--- a/src/AttendanceManager/templates/general/profile.html
+++ b/src/AttendanceManager/templates/general/profile.html
@@ -43,6 +43,8 @@
       </div>
     </div>
 
+    {% if current_user.UserType != 1 %}
+
     <div class="row mb-3">
       <div class="form-group ">
         <label for="study_program" class="form-label">Study Program</label>
@@ -54,6 +56,8 @@
         </div>
       </div>
     </div>
+
+    {% endif %}
 
     <div class="form-group">
       <div class="row mb-3">
