--- a/src/AttendanceManager/templates/teacher/courses.html
+++ b/src/AttendanceManager/templates/teacher/courses.html
@@ -6,7 +6,10 @@
 
 <div class="row panel mt-5">
 
-  <h1 class="mb-5">My Courses</h1>
+  <h1 class="mb-5">
+    <i class="bi bi-graph-down"></i>
+    My Courses
+  </h1>
 
   <div class="col-3 menu">
     <div class="list-group">
