--- a/src/AttendanceManager/templates/teacher/courses.html
+++ b/src/AttendanceManager/templates/teacher/courses.html
@@ -6,10 +6,10 @@
 
 <div class="row panel mt-5">
 
-  <h1 class="mb-5">
+  <legend class="mb-3">
     <i class="bi bi-graph-down"></i>
     My Courses
-  </h1>
+  </legend>
 
   <div class="col-3 menu">
     <div class="list-group">
@@ -32,7 +32,7 @@
 
   <div class=" col-9">
     {% if selected_course != None %}
-    <h2>
+    <h3>
       {{ selected_course.Name }}
 
       <div class="float-end">
@@ -42,7 +42,7 @@
 
       <hr>
 
-    </h2>
+    </h3>
 
     <table style="background-color: white;" class="table table-striped table-hover table-bordered text-center">
       <thead class="table-dark">
@@ -111,6 +111,20 @@
               <div class="input-group has-validation">
                 <input type="text" name="course_name" class="form-control" placeholder="Course Name">
               </div>
+            </div>
+          </div>
+
+          <div class="row mb-3">
+            <div class="form-group">
+              <label for="course_department" class="form-label">Department</label>
+              <ul class="list-group">
+                {% for department in departments %}
+                <li class="list-group-item">
+                  <input class="form-check-input me-1" name="course_department" type="checkbox" value="{{ department.DepartmentID }}">
+                  {{ department.DepartmentName }}
+                </li>
+                {% endfor %}
+              </ul>
             </div>
           </div>
 
